--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ line_length = 200
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^1.4.2"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 
