--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-pandas
-loguru
-pyinstaller
+colorama==0.4.4; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.5.0"
+loguru==0.6.0; python_version >= "3.5"
+numpy==1.22.3; python_version >= "3.10"
+pandas==1.4.2; python_version >= "3.8"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+pytz==2022.1; python_version >= "3.8"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+win32-setctime==1.1.0; sys_platform == "win32" and python_version >= "3.5"
